@@ -5,4 +5,5 @@ config
 hook.sh
 certs/*
 archive/*
+accounts/*
 .acme-challenges/*
